--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: "GitHub Classroom Autograding Results handler"
-icon: activity
-color: gray-dark
+icon: "activity"
+color: "gray-dark"
 description: "Integrate your CS class with GitHub using GitHub Classroom"
 inputs:
   token:
